# raw-data-api-py

./: .pre-commit-config.yaml  404.html  README.md  index.html  objects.inv  pyproject.toml  sitemap.xml
LICENSE/: index.html
api/: index.html
docs/: api.md
osm_data_client/: __init__.py  api.py  cli.py  client.py  exceptions.py  models.py  processing.py  test.py
osm_data_client/utils/: __init__.py  file.py  geometry.py  transform.py
search/: search_index.json
tests/: README.md  run_tests.py  test_api.py  test_cli.py
